--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
                                         <li class="active"> <a href="index.html">Home</a> </li>
                                         <li> <a href="about.html">About</a> </li>
                                         <li><a href="brand.html">Brand</a></li>
-                                        <li><a href="special.html">Specials</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                         <li class="last">
                                             <a href="#"><img src="images/search_icon.png" alt="icon" /></a>
@@ -244,8 +243,8 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 mrgn">
                         <div class="brand_box">
-                            <img src="images/5.png" alt="img" />
-                            <h3>$<strong class="red">100</strong></h3>
+                            <img src="images/laptop.png" alt="img" />
+                            <h3>GHS<strong class="red">9,200</strong></h3>
                             <span>Mobile Phone</span>
                             <i><img src="images/star.png"/></i>
                             <i><img src="images/star.png"/></i>
@@ -302,7 +301,7 @@
                             </div>
                             <div class="full testimonial_cont text_align_center cross_layout">
                                 <div class="cross_inner">
-                                    <h3>Due markes<br><strong class="ornage_color">Rental</strong></h3>
+                                     <h3>From<br><strong class="ornage_color">Our Customer</strong></h3>
                                     <i>
                                         "S. Majeed Phones made it so easy for me to get the latest iPhone without paying everything upfront. 
                                         Their 40% installment plan is a lifesaver! I’m already enjoying my phone while paying the rest weekly. Highly recommend!" – Isaac Yeboah.</i>
@@ -322,7 +321,7 @@
                             </div>
                             <div class="full testimonial_cont text_align_center cross_layout">
                                 <div class="cross_inner">
-                                    <h3>Due markes<br><strong class="ornage_color">Rental</strong></h3>
+                                     <h3>From<br><strong class="ornage_color">Our Customer</strong></h3>
                                     <p>"The flexibility of their payment plans is unmatched! I got my Samsung Galaxy and was able 
                                         to pay over time with no stress. Great service and genuine products!" –  Muniru Dreamer.</i>
                                     </p>
@@ -342,7 +341,7 @@
                             </div>
                             <div class="full testimonial_cont text_align_center cross_layout">
                                 <div class="cross_inner">
-                                    <h3>Due markes<br><strong class="ornage_color">Rental</strong></h3>
+                                    <h3>From<br><strong class="ornage_color">Our Customer</strong></h3>
                                     <p>
                                         "I never thought I could afford a MacBook, but S. Majeed Phones made it possible. 
                                         The upfront payment was reasonable, and the weekly payments fit perfectly into my budget. Amazing store!" – Nancy H.
@@ -405,9 +404,9 @@
                         <div class="footer-box">
                             <div class="headinga">
                                 <h3>Address</h3>
-                                <span>Healing Center, 176 W Streetname,New York, NY 10014, US</span>
-                                <p>(+71) 8522369417
-                                    <br>demo@gmail.com</p>
+                                <span>Circle, Mobile Line - Accra Ghana</span>
+                                <p>+233 0545484860
+                                    <br>smajeedphone@gmail.com</p>
                             </div>
                             <ul class="location_icon">
                                 <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -431,7 +430,7 @@
             </div>
             <div class="copyright">
                 <div class="container">
-                    <p>© 2019 All Rights Reserved. Design By<a href="https://html.design/"> Free Html Templates</a></p>
+                    <p>© 2024 All Rights Reserved. Design By Muniru Dreamer</a></p>
                 </div>
             </div>
         </div>
