--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>pomato</title>
+    <title>S Majeed Phones</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -53,7 +53,7 @@
                         <div class="full">
                             <div class="center-desk">
                                 <div class="logo">
-                                    <a href="index.html"><img src="images/logo.png" alt="#"></a>
+                                    <a href="index.html"><img src="images/slogo.png" alt="#"></a>
                                 </div>
                             </div>
                         </div>
@@ -66,7 +66,6 @@
                                         <li class="active"> <a href="index.html">Home</a> </li>
                                         <li> <a href="about.html">About</a> </li>
                                         <li><a href="brand.html">Brand</a></li>
-                                        <li><a href="special.html">Specials</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                         <li class="last">
                                             <a href="#"><img src="images/search_icon.png" alt="icon" /></a>
@@ -79,9 +78,9 @@
                     <div class="col-md-6 offset-md-6">
                         <div class="location_icon_bottum">
                             <ul>
-                                <li><img src="icon/call.png" />(+71)9876543109</li>
-                                <li><img src="icon/email.png" />demo@gmail.com</li>
-                                <li><img src="icon/loc.png" />Location</li>
+                                <li><img src="icon/call.png" />0545484860</li>
+                                <li><img src="icon/email.png" />smajeedphone@gmail.com</li>
+                                <li><img src="icon/loc.png" />Accra</li>
                             </ul>
                         </div>
                     </div>
@@ -115,14 +114,22 @@
                 <div class="col-xl-7 col-lg-7 col-md-7 co-sm-l2">
                     <div class="about_box">
                         <span>Our Mobile Shop</span>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of It is a long established fact that a reader will be distracted by the </p>
+                        <p>It is so easy to get the latest iPhone without paying everything upfront.
+                             Our 40% installment plan is a lifesaver! You get to enjoy your
+                              phone while paying the rest weekly. Highly recommend!</p>
 
                     </div>
                 </div>
                 <div class="col-xl-7 col-lg-7 col-md-7 co-sm-l2">
                     <div class="about_box_ ">
                         <span>Our Mobile Shop</span>
-                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of It is a long established fact that a reader will be distracted by the </p>
+                        <p>Looking for the latest Apple and Samsung phones, Apple Watches, or laptops? We've got you covered!
+                            ✨ Why Choose Us?
+                                Wide range of Apple and Samsung devices
+                                Affordable Installment Plans:
+                                Pay just 40% upfront, take your device home, and pay the rest (60%) on a convenient weekly 
+                                payment plan with interest. 
+                        </p>
 
                     </div>
                 </div>
@@ -146,9 +153,9 @@
                         <div class="footer-box">
                             <div class="headinga">
                                 <h3>Address</h3>
-                                <span>Healing Center, 176 W Streetname,New York, NY 10014, US</span>
-                                <p>(+71) 8522369417
-                                    <br>demo@gmail.com</p>
+                                <span>Circle, Mobile Line - Accra Ghana</span>
+                                <p>+233 0545484860
+                                    <br>smajeedphone@gmail.com</p>
                             </div>
                             <ul class="location_icon">
                                 <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -172,7 +179,7 @@
             </div>
             <div class="copyright">
                 <div class="container">
-                    <p>© 2019 All Rights Reserved. Design By<a href="https://html.design/"> Free Html Templates</a></p>
+                    <p>© 2024 All Rights Reserved. Design By Muniru Dreamer</a></p>
                 </div>
             </div>
         </div>
