--- a/brand.html
+++ b/brand.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>pomato</title>
+    <title>S Majeed Phones</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -53,7 +53,7 @@
                         <div class="full">
                             <div class="center-desk">
                                 <div class="logo">
-                                    <a href="index.html"><img src="images/logo.png" alt="#"></a>
+                                    <a href="index.html"><img src="images/slogo.png" alt="#"></a>
                                 </div>
                             </div>
                         </div>
@@ -66,7 +66,6 @@
                                         <li class="active"> <a href="index.html">Home</a> </li>
                                         <li> <a href="about.html">About</a> </li>
                                         <li><a href="brand.html">Brand</a></li>
-                                        <li><a href="special.html">Specials</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                         <li class="last">
                                             <a href="#"><img src="images/search_icon.png" alt="icon" /></a>
@@ -79,9 +78,9 @@
                     <div class="col-md-6 offset-md-6">
                         <div class="location_icon_bottum">
                             <ul>
-                                <li><img src="icon/call.png" />(+71)9876543109</li>
-                                <li><img src="icon/email.png" />demo@gmail.com</li>
-                                <li><img src="icon/loc.png" />Location</li>
+                                <li><img src="icon/call.png" />0545484860</li>
+                                <li><img src="icon/email.png" />smajeedphone@gmail.com</li>
+                                <li><img src="icon/loc.png" />Accra</li>
                             </ul>
                         </div>
                     </div>
@@ -113,9 +112,9 @@
                 <div class="row">
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 margin">
                         <div class="brand_box">
-                            <img src="images/1.png" alt="img" />
-                            <h3>$<strong class="red">100</strong></h3>
-                            <span>Mobile Phone</span>
+                            <img src="images/iphone 16.jpg" alt="img" />
+                            <h3>GHS<strong class="red">13,600</strong></h3>
+                            <span>IPhone 16</span>
                             <i><img src="images/star.png"/></i>
                             <i><img src="images/star.png"/></i>
                             <i><img src="images/star.png"/></i>
@@ -124,9 +123,9 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 margin">
                         <div class="brand_box">
-                            <img src="images/2.png" alt="img" />
-                            <h3>$<strong class="red">100</strong></h3>
-                            <span>Mobile Phone</span>
+                            <img src="images/iphone 15.jpg" alt="img" />
+                            <h3>GHS<strong class="red">12,200</strong></h3>
+                            <span>IPhone 16</span>
                             <i><img src="images/star.png"/></i>
                             <i><img src="images/star.png"/></i>
                             <i><img src="images/star.png"/></i>
@@ -135,9 +134,9 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 margin">
                         <div class="brand_box">
-                            <img src="images/3.png" alt="img" />
-                            <h3>$<strong class="red">100</strong></h3>
-                            <span>Mobile Phone</span>
+                            <img src="images/iphone 14.jpg" alt="img" />
+                            <h3>GHS<strong class="red">8,600</strong></h3>
+                            <span>IPhone 14</span>
                             <i><img src="images/star.png"/></i>
                             <i><img src="images/star.png"/></i>
                             <i><img src="images/star.png"/></i>
@@ -146,8 +145,19 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                         <div class="brand_box">
-                            <img src="images/4.png" alt="img" />
-                            <h3>$<strong class="red">100</strong></h3>
+                            <img src="images/samsung A22.jpg" alt="img" />
+                            <h3>GHS<strong class="red">2,600</strong></h3>
+                            <span>Samsung A22</span>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                            <i><img src="images/star.png"/></i>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 mrgn">
+                        <div class="brand_box">
+                            <img src="images/laptop.png" alt="img" />
+                            <h3>GHS<strong class="red">9,200</strong></h3>
                             <span>Mobile Phone</span>
                             <i><img src="images/star.png"/></i>
                             <i><img src="images/star.png"/></i>
@@ -157,20 +167,9 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 mrgn">
                         <div class="brand_box">
-                            <img src="images/5.png" alt="img" />
-                            <h3>$<strong class="red">100</strong></h3>
-                            <span>Mobile Phone</span>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                            <i><img src="images/star.png"/></i>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 mrgn">
-                        <div class="brand_box">
-                            <img src="images/6.png" alt="img" />
-                            <h3>$<strong class="red">100</strong></h3>
-                            <span>Mobile Phone</span>
+                            <img src="images/watch.jpg" alt="img" />
+                            <h3>GHS<strong class="red">2,700</strong></h3>
+                            <span>Apple Watch</span>
                             <i><img src="images/star.png"/></i>
                             <i><img src="images/star.png"/></i>
                             <i><img src="images/star.png"/></i>
@@ -196,9 +195,9 @@
                         <div class="footer-box">
                             <div class="headinga">
                                 <h3>Address</h3>
-                                <span>Healing Center, 176 W Streetname,New York, NY 10014, US</span>
-                                <p>(+71) 8522369417
-                                    <br>demo@gmail.com</p>
+                                <span>Circle, Mobile Line - Accra Ghana</span>
+                                <p>+233 0545484860
+                                    <br>smajeedphone@gmail.com</p>
                             </div>
                             <ul class="location_icon">
                                 <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -222,7 +221,7 @@
             </div>
             <div class="copyright">
                 <div class="container">
-                    <p>© 2019 All Rights Reserved. Design By<a href="https://html.design/"> Free Html Templates</a></p>
+                    <p>© 2024 All Rights Reserved. Design By Muniru Dreamer</a></p>
                 </div>
             </div>
         </div>
