--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>pomato</title>
+    <title>smajeedphone</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -53,7 +53,7 @@
                         <div class="full">
                             <div class="center-desk">
                                 <div class="logo">
-                                    <a href="index.html"><img src="images/logo.png" alt="#"></a>
+                                    <a href="index.html"><img src="images/slogo.png" alt="#"></a>
                                 </div>
                             </div>
                         </div>
@@ -66,7 +66,7 @@
                                         <li class="active"> <a href="index.html">Home</a> </li>
                                         <li> <a href="about.html">About</a> </li>
                                         <li><a href="brand.html">Brand</a></li>
-                                        <li><a href="special.html">Specials</a></li>
+                                       
                                         <li><a href="contact.html">Contact Us</a></li>
                                         <li class="last">
                                             <a href="#"><img src="images/search_icon.png" alt="icon" /></a>
@@ -79,9 +79,10 @@
                     <div class="col-md-6 offset-md-6">
                         <div class="location_icon_bottum">
                             <ul>
-                                <li><img src="icon/call.png" />(+71)9876543109</li>
-                                <li><img src="icon/email.png" />demo@gmail.com</li>
-                                <li><img src="icon/loc.png" />Location</li>
+                                <li><img src="icon/call.png" />0545484860</li>
+                                <li><img src="icon/email.png" />smajeedphone@gmail.com</li>
+                                <li><img src="icon/loc.png" />Accra</li>
+                            </ul>
                             </ul>
                         </div>
                     </div>
@@ -144,9 +145,9 @@
                         <div class="footer-box">
                             <div class="headinga">
                                 <h3>Address</h3>
-                                <span>Healing Center, 176 W Streetname,New York, NY 10014, US</span>
-                                <p>(+71) 8522369417
-                                    <br>demo@gmail.com</p>
+                                <span>Circle, Mobile Line - Accra Ghana</span>
+                                <p>+233 0545484860
+                                    <br>smajeedphone@gmail.com</p>
                             </div>
                             <ul class="location_icon">
                                 <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
@@ -170,7 +171,7 @@
             </div>
             <div class="copyright">
                 <div class="container">
-                    <p>© 2019 All Rights Reserved. Design By<a href="https://html.design/"> Free Html Templates</a></p>
+                    <p>© 2024 All Rights Reserved. Design By Muniru Dreamer</a></p>
                 </div>
             </div>
         </div>
