corrected logo and prices

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         <div class="brand_box">
                             <img src="images/laptop.png" alt="img" />
                             <h3>GHS<strong class="red">9,200</strong></h3>
-                            <span>Mobile Phone</span>
+                            <span>Mac Book</span>
                             <i><img src="images/star.png"/></i>
                             <i><img src="images/star.png"/></i>
                             <i><img src="images/star.png"/></i>
